<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="enter_your_name">Please enter your name</string>
    <string name="toppings">Toppings</string>
    <string name="whip_cream">Whip Cream</string>
    <string name="choclate">Choclate</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank you <xliff:g id="name">%s</xliff:g>, for your order.</string>
    <string name="you_need_to_pay"> You need to pay </string>
</resources>

