<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bponnuru.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_your_name"
            android:inputType="textCapWords"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView

            style="@style/HeaderTextView"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/whip_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/whip_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocklate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/choclate"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextView"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:onClick="decrement"
                android:padding="8dp"
                android:text="-"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:onClick="increment"
                android:padding="8dp"
                android:text="+"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            style="@style/HeaderTextView"
            android:text="@string/order_summary" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"

            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="submitOrder"
            android:padding="8dp"
            android:text="@string/order" />
    </LinearLayout>

</ScrollView>
